--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h1 x-large class="sample-content">Your Content Here</h1>
+  <h1 x-large class="sample-content">Your Content Here 123</h1>
 
   <hr>
 
